welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: not found: value methodeAppeleeparLecompilateur
methodeAppeleeparLecompilateur()
^