welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
methodeAppeleeparLecompilateur()
gauche()
avance()
avance()
avance()
avance()
recule()
